--- a/testify-ui/package.json
+++ b/testify-ui/package.json
@@ -10,11 +10,15 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@babel/plugin-proposal-class-properties": "7.18.6",
+		"@babel/plugin-proposal-decorators": "7.24.7",
+		"@babel/preset-react": "7.24.7",
+		"@babel/preset-typescript": "7.24.7",
 		"@reduxjs/toolkit": "^2.2.6",
-		"@testing-library/jest-dom": "^6.4.6",
 		"@testing-library/react": "^16.0.0",
 		"@types/jest": "29.5.12",
 		"axios": "1.7.2",
+		"babel-plugin-transform-typescript-metadata": "0.3.2",
 		"dotenv": "16.4.5",
 		"i18next": "^23.11.5",
 		"react": "^18.3.1",
@@ -25,6 +29,9 @@
 		"redux-mock-store": "^1.5.4"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "7.25.4",
+		"@jest/globals": "29.7.0",
+		"@testing-library/jest-dom": "6.5.0",
 		"@types/leaflet": "1.9.12",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
@@ -37,6 +44,7 @@
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
 		"jest": "^29.7.0",
+		"jest-environment-jsdom": "29.7.0",
 		"jsdom": "^24.1.0",
 		"typescript": "^5.2.2",
 		"vite": "^5.3.1",
