--- a/testify-ui/tsconfig.app.json
+++ b/testify-ui/tsconfig.app.json
@@ -28,5 +28,5 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true
 	},
-	"include": ["src", "scripts"]
+	"include": ["src", "scripts", "__mocks__/emptyMock.ts"]
 }
