--- a/testify-ui/package.json
+++ b/testify-ui/package.json
@@ -14,19 +14,25 @@
 		"@babel/plugin-proposal-decorators": "7.24.7",
 		"@babel/preset-react": "7.24.7",
 		"@babel/preset-typescript": "7.24.7",
+		"@craco/craco": "7.1.0",
 		"@reduxjs/toolkit": "^2.2.6",
 		"@testing-library/react": "^16.0.0",
 		"@types/jest": "29.5.12",
+		"autoprefixer": "10.4.20",
 		"axios": "1.7.2",
 		"babel-plugin-transform-typescript-metadata": "0.3.2",
 		"dotenv": "16.4.5",
 		"i18next": "^23.11.5",
+		"postcss": "8.4.41",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-i18next": "^14.1.2",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.24.1",
-		"redux-mock-store": "^1.5.4"
+		"redux-mock-store": "^1.5.4",
+		"tailwindcss": "3.4.10",
+		"twin.macro": "3.4.1",
+		"typescript": "4.9.5"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "7.25.4",
@@ -46,7 +52,6 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "29.7.0",
 		"jsdom": "^24.1.0",
-		"typescript": "^5.2.2",
 		"vite": "^5.3.1",
 		"vitest": "^1.6.0"
 	}
