--- a/testify-ui/package.json
+++ b/testify-ui/package.json
@@ -24,6 +24,7 @@
 		"babel-plugin-transform-typescript-metadata": "0.3.2",
 		"dotenv": "16.4.5",
 		"i18next": "^23.11.5",
+		"mini-svg-data-uri": "1.4.4",
 		"postcss": "8.4.41",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
